[package]
name = "arf-strings-fuzz"
version = "0.0.0"
edition = "2018"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
arf-strings = { path = ".." }
libfuzzer-sys = "0.3.2"

[[bin]]
name = "host_to_str_to_host"
path = "fuzz_targets/host_to_str_to_host.rs"
test = false
doc = false

[[bin]]
name = "str_to_host_to_str"
path = "fuzz_targets/str_to_host_to_str.rs"
test = false
doc = false
